LU-8354 ldlm: soft lockup in ldlm_plain_compat_queue

commit c09b59bb958f3e089b95dd9492cc1bef17cb3782
LU-3963 ldlm: convert to linux list api

breaks loop iteration optimisation.
tmp variable is modified later to skip already
processed locks from the same mode group.

Change-Id: I4dd493d6bd5bb2ac54801cb289dc89efabdfa920
Seagate-bug-id: MRP-3611
Signed-off-by: Andriy Skulysh <andriy.skulysh@seagate.com>
Reviewed-on: http://review.whamcloud.com/21093
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>